add animation to intro text

--- a/index.html
+++ b/index.html
@@ -28,9 +28,27 @@
                     <li><a href="#"><i class="fi-list"></i> <span class ="navname">Blog</span></a></li>
                     <li><a href="#"><i class="fi-list"></i> <span class="navname">Contact Us</span></a></li>
                 </ul>
-
+            </div>
+            <div class="row empty">
+                <div class="small-6 large-centered columns">&nbsp;</div>
             </div>
 
+            <div class="row colunms ">
+                <p class="cd-headline rotate-1">
+                    <span>We are an Architectural company that is</span>
+                    <span class="cd-words-wrapper">
+				<b class="is-visible">Innovative</b>
+				<b>Craetive</b>
+				<b>Determined</b>
+			</span>
+                    <span>We design building for the future</span>
+                </p>
+                <!--
+                <div class="small-6 large-centered columns text-center description">We are a innovative and creative Architectural company dedicated to building,future focused Sturcuture. We aim to please our Clients by setting the standards that they may be proud off.</div>
+
+            </div>
+-->
+            </div>
         </section>
     </div>
 
