--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="css/app.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" href="css/reset.css">
+    <!-- CSS reset -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Resource style -->
+
+    <script src="js/modernizr.js"></script>
+    <!-- Modernizr -->
 </head>
 
 <body>
@@ -19,7 +28,7 @@
             <div class="row columns text-center">
                 <div class="Aname">PRINT DESIGN AGENCY</div>
             </div>
-            <div class="row columns text-center">
+            <div class="row small-12 columns text-center">
                 <ul class="menu">
                     <li><a href="#"><i class="fi-list"></i> <span class="navname">Home</span></a></li>
                     <li><a href="#"><i class="fi-list"></i> <span class="navname">About Us</span></a></li>
@@ -37,18 +46,32 @@
                 <p class="cd-headline rotate-1">
                     <span>We are an Architectural company that is</span>
                     <span class="cd-words-wrapper">
-				<b class="is-visible">Innovative</b>
-				<b>Craetive</b>
-				<b>Determined</b>
-			</span>
-                    <span>We design building for the future</span>
+                        <b class="is-visible">Innovative</b>
+                        <b>Creative</b>
+                        <b>Determined</b>
+                    </span>
                 </p>
-                <!--
-                <div class="small-6 large-centered columns text-center description">We are a innovative and creative Architectural company dedicated to building,future focused Sturcuture. We aim to please our Clients by setting the standards that they may be proud off.</div>
+            </div>
+        </section>
+        <hr>
+        <section id="Portfolio">
+            <h2 class="titleP">Portfolio</h2>
+            <div class="row small-up-1 medium-up-2 large-up-4 projects">
+                <div class="column">
+                    <img src="images/photo-1445551712021-28753c605094.jpg" class="thumbnail" alt="">
+                </div>
+                <div class="column">
+                    <img src="images/photo-1444677374926-21fdd7d58bd4.jpg" class="thumbnail" alt="">
+                </div>
+                <div class="column">
+                    <img src="images/photo-1423824649838-d8f4efbc0cb3.jpg" class="thumbnail" alt="">
+                </div>
+                <div class="column">
+                    <img src="images/photo-1422284763110-6d0edd657b13.jpg" class="thumbnail" alt="">
+                </div>
+            </div>
 
-            </div>
--->
-            </div>
+
         </section>
     </div>
 
