--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
         <hr>
         <section id="Portfolio">
             <h2 class="titleP">Portfolio</h2>
-            <div class="row small-up-1 medium-up-2 large-up-4 projects">
-                <div class="column">
-                    <img src="images/photo-1445551712021-28753c605094.jpg" class="thumbnail" alt="">
+            <div class="row small-up-1 medium-up-2 large-up-4">
+                <div class="column ">
+                    <img src="images/photo-1445551712021-28753c605094.jpg" class="thumbnail projects" alt="">
+                </div>
+                <div class="column ">
+                    <img src="images/photo-1444677374926-21fdd7d58bd4.jpg" class="thumbnail projects" alt="">
+                </div>
+                <div class="column ">
+                    <img src="images/photo-1423824649838-d8f4efbc0cb3.jpg" class="thumbnail projects" alt="">
                 </div>
                 <div class="column">
-                    <img src="images/photo-1444677374926-21fdd7d58bd4.jpg" class="thumbnail" alt="">
-                </div>
-                <div class="column">
-                    <img src="images/photo-1423824649838-d8f4efbc0cb3.jpg" class="thumbnail" alt="">
-                </div>
-                <div class="column">
-                    <img src="images/photo-1422284763110-6d0edd657b13.jpg" class="thumbnail" alt="">
+                    <img src="images/photo-1422284763110-6d0edd657b13.jpg" class="thumbnail projects" alt="">
                 </div>
             </div>
 
