add a list menu style to html and css file

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div class="Aname">PRINT DESIGN AGENCY</div>
             </div>
             <div class="row small-12 columns text-center">
+                <!--
                 <ul class="menu">
                     <li><a href="#"><i class="fi-list"></i> <span class="navname">Home</span></a></li>
                     <li><a href="#"><i class="fi-list"></i> <span class="navname">About Us</span></a></li>
@@ -37,6 +38,24 @@
                     <li><a href="#"><i class="fi-list"></i> <span class ="navname">Blog</span></a></li>
                     <li><a href="#"><i class="fi-list"></i> <span class="navname">Contact Us</span></a></li>
                 </ul>
+-->
+                <nav class="menu menu--prospero">
+                    <ul class="menu__list">
+                        <li class="menu__item menu__item--current">
+                            <a class="menu__link">Home</a></li>
+                        <li class="menu__item">
+                            <a class="menu__link">About us</a></li>
+                        <li class="menu__item"><a class="menu__link #Portfolio">Porfolio</a></li>
+                        <li class="menu__item"><a class="menu__link">Blog</a></li>
+                        <li class="menu__item"><a class="menu__link">Members</a></li>
+                        <li class="menu__item"><a class="menu__link">Contact us</a></li>
+                    </ul>
+                </nav>
+
+
+
+
+
             </div>
             <div class="row empty">
                 <div class="small-6 large-centered columns">&nbsp;</div>
