--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <section id="Portfolio">
             <h2 class="titleP">Portfolio</h2>
             <div class="row small-up-1 medium-up-2 large-up-4">
+                <!--
                 <div class="column ">
                     <img src="images/photo-1445551712021-28753c605094.jpg" class="thumbnail projects" alt="">
                 </div>
@@ -88,6 +89,27 @@
                 <div class="column">
                     <img src="images/photo-1422284763110-6d0edd657b13.jpg" class="thumbnail projects" alt="">
                 </div>
+-->
+                <ul class="grid cs-style-1">
+
+                    <li>
+                        <figure>
+                            <img src="images/photo-1422284763110-6d0edd657b13.jpg" alt="img01">
+                            <figcaption>
+                                <h3>Architectural design</h3>
+                                <span>Print Solutions</span>
+                                <a href="https://www.architecture.com/Explore/Stories/Howtotellifabuildingiswell-designed.aspx">Take a look</a>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <!-- ... -->
+                        </figure>
+                    </li>
+                    <!-- ... -->
+                </ul>
+
             </div>
 
 
