--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <a class="menu__link">Home</a></li>
                         <li class="menu__item">
                             <a class="menu__link">About us</a></li>
-                        <li class="menu__item"><a class="menu__link #Portfolio">Porfolio</a></li>
+                        <li class="menu__item"><a class="menu__link" href=" #Portfolio">Porfolio</a></li>
                         <li class="menu__item"><a class="menu__link">Blog</a></li>
                         <li class="menu__item"><a class="menu__link">Members</a></li>
                         <li class="menu__item"><a class="menu__link">Contact us</a></li>
@@ -104,10 +104,34 @@
                     </li>
                     <li>
                         <figure>
-                            <!-- ... -->
+                            <img src="images/photo-1445551712021-28753c605094.jpg" alt="img02">
+                            <figcaption>
+                                <h3>Architectural design</h3>
+                                <span>Print Solutions</span>
+                                <a href="https://www.architecture.com/Explore/Stories/Howtotellifabuildingiswell-designed.aspx">Take a look</a>
+                            </figcaption>
                         </figure>
                     </li>
-                    <!-- ... -->
+                    <li>
+                        <figure>
+                            <img src="images/photo-1423824649838-d8f4efbc0cb3.jpg" alt="img03">
+                            <figcaption>
+                                <h3>Architectural design</h3>
+                                <span>Print Solutions</span>
+                                <a href="https://www.architecture.com/Explore/Stories/Howtotellifabuildingiswell-designed.aspx">Take a look</a>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="images/photo-1416339442236-8ceb164046f8.jpg" alt="img04">
+                            <figcaption>
+                                <h3>Architectural design</h3>
+                                <span>Print Solutions</span>
+                                <a href="https://www.architecture.com/Explore/Stories/Howtotellifabuildingiswell-designed.aspx">Take a look</a>
+                            </figcaption>
+                        </figure>
+                    </li>
                 </ul>
 
             </div>
