added a shape over effect

--- a/index.html
+++ b/index.html
@@ -29,16 +29,7 @@
                 <div class="Aname">PRINT DESIGN AGENCY</div>
             </div>
             <div class="row small-12 columns text-center">
-                <!--
-                <ul class="menu">
-                    <li><a href="#"><i class="fi-list"></i> <span class="navname">Home</span></a></li>
-                    <li><a href="#"><i class="fi-list"></i> <span class="navname">About Us</span></a></li>
-                    <li><a href="#"><i class="fi-list"></i> <span class="navname">Portfolio</span></a></li>
-                    <li><a href="#"><i class="fi-list"></i> <span class="navname">Members</span></a></li>
-                    <li><a href="#"><i class="fi-list"></i> <span class ="navname">Blog</span></a></li>
-                    <li><a href="#"><i class="fi-list"></i> <span class="navname">Contact Us</span></a></li>
-                </ul>
--->
+                <!---------------------------Navigation bar----------------------->
                 <nav class="menu menu--prospero">
                     <ul class="menu__list">
                         <li class="menu__item menu__item--current">
@@ -51,10 +42,7 @@
                         <li class="menu__item"><a class="menu__link">Contact us</a></li>
                     </ul>
                 </nav>
-
-
-
-
+                <!--Animated Text-->
 
             </div>
             <div class="row empty">
@@ -73,27 +61,14 @@
             </div>
         </section>
         <hr>
+        <!--------------------Portfolio Section--------->
         <section id="Portfolio">
             <h2 class="titleP">Portfolio</h2>
-            <div class="row small-up-1 medium-up-2 large-up-4">
-                <!--
-                <div class="column ">
-                    <img src="images/photo-1445551712021-28753c605094.jpg" class="thumbnail projects" alt="">
-                </div>
-                <div class="column ">
-                    <img src="images/photo-1444677374926-21fdd7d58bd4.jpg" class="thumbnail projects" alt="">
-                </div>
-                <div class="column ">
-                    <img src="images/photo-1423824649838-d8f4efbc0cb3.jpg" class="thumbnail projects" alt="">
-                </div>
-                <div class="column">
-                    <img src="images/photo-1422284763110-6d0edd657b13.jpg" class="thumbnail projects" alt="">
-                </div>
--->
-                <ul class="grid cs-style-1">
+            <div class="row columns">
+                <ul class="grid cs-style-1 rows small-up-1 medium-up-1 large-up-2">
 
-                    <li>
-                        <figure>
+                    <li class="columns">
+                        <figure class>
                             <img src="images/photo-1422284763110-6d0edd657b13.jpg" alt="img01">
                             <figcaption>
                                 <h3>Architectural design</h3>
@@ -102,7 +77,7 @@
                             </figcaption>
                         </figure>
                     </li>
-                    <li>
+                    <li class="columns">
                         <figure>
                             <img src="images/photo-1445551712021-28753c605094.jpg" alt="img02">
                             <figcaption>
@@ -112,7 +87,7 @@
                             </figcaption>
                         </figure>
                     </li>
-                    <li>
+                    <li class="columns">
                         <figure>
                             <img src="images/photo-1423824649838-d8f4efbc0cb3.jpg" alt="img03">
                             <figcaption>
@@ -122,7 +97,7 @@
                             </figcaption>
                         </figure>
                     </li>
-                    <li>
+                    <li class="columns">
                         <figure>
                             <img src="images/photo-1416339442236-8ceb164046f8.jpg" alt="img04">
                             <figcaption>
@@ -135,6 +110,25 @@
                 </ul>
 
             </div>
+        </section>
+        <!--        MEmbers Section-->
+        <section id="Members" class="rows columns">
+            <section id="grid" class="grid clearfix">
+                <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
+                    <figure>
+                        <img src="img/1.png" />
+                        <svg viewBox="0 0 180 320" preserveAspectRatio="none">
+                            <path d="M 180,160 0,218 0,0 180,0 z" />
+                        </svg>
+                        <figcaption>
+                            <h2>Crystalline</h2>
+                            <p>Soko radicchio bunya nuts gram dulse.</p>
+                            <button>View</button>
+                        </figcaption>
+                    </figure>
+                </a>
+                <!-- ... -->
+            </section>
 
 
         </section>
