add a css animation

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Print Design sAgency</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="start/css/reset.css">
     <!-- CSS reset -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="start/css/style.css">
     <!-- Resource style -->
 
-    <script src="js/modernizr.js"></script>
+    <script src="start/js/modernizr.js"></script>
     <!-- Modernizr -->
 </head>
 
@@ -39,25 +39,41 @@
                         <li class="menu__item"><a class="menu__link" href=" #Portfolio">Porfolio</a></li>
                         <li class="menu__item"><a class="menu__link">Blog</a></li>
                         <li class="menu__item"><a class="menu__link">Members</a></li>
-                        <li class="menu__item"><a class="menu__link">Contact us</a></li>
+                        <li class="menu__item"><a class="menu__link">Contact us</a></li>s
                     </ul>
                 </nav>
-                <!--Animated Text-->
-
             </div>
+
+            <!--            Animated text-->
             <div class="row empty">
                 <div class="small-6 large-centered columns">&nbsp;</div>
             </div>
 
             <div class="row colunms ">
-                <p class="cd-headline rotate-1">
-                    <span>We are an Architectural company that is</span>
-                    <span class="cd-words-wrapper">
-                        <b class="is-visible">Innovative</b>
-                        <b>Creative</b>
-                        <b>Determined</b>
-                    </span>
-                </p>
+                <!--
+                <section class="cd-intro">
+                    <h1 class="cd-headline letters type">
+			<span>We are an Architectural Design Agency that is:</span>
+			<span class="cd-words-wrapper waiting">
+				<b class="is-visible">Innovative</b>
+				<b>Dedicated</b>
+				<b>Focused</b>
+			</span>
+		</h1>
+                </section>
+-->
+                <section class="cd-intro">
+                    <h1 class="cd-headline letters rotate-3">
+			<span>We are Architectural Design Agency that is:</span>
+			<span class="cd-words-wrapper">
+				<b class="is-visible">Innotive</b>
+				<b>Dedicated</b>
+				<b>Focused</b>
+			</span>
+		</h1>
+                </section>
+
+
             </div>
         </section>
         <hr>
@@ -65,11 +81,11 @@
         <section id="Portfolio">
             <h2 class="titleP">Portfolio</h2>
             <div class="row columns">
-                <ul class="grid cs-style-1 rows small-up-1 medium-up-1 large-up-2">
+                <ul class="grid cs-style-1 rows small-up-1 medium-up-1 large-up-2 imgH">
 
-                    <li class="columns">
-                        <figure class>
-                            <img src="images/photo-1422284763110-6d0edd657b13.jpg" alt="img01">
+                    <li class="columns ">
+                        <figure>
+                            <img src="images/baroque_architecture-wallpaper-1366x768.jpg" alt="img01">
                             <figcaption>
                                 <h3>Architectural design</h3>
                                 <span>Print Solutions</span>
@@ -79,7 +95,7 @@
                     </li>
                     <li class="columns">
                         <figure>
-                            <img src="images/photo-1445551712021-28753c605094.jpg" alt="img02">
+                            <img src="images/across_the_floors_of_union_station-wallpaper-1366x768%20(1).jpg" alt="img02">
                             <figcaption>
                                 <h3>Architectural design</h3>
                                 <span>Print Solutions</span>
@@ -89,7 +105,7 @@
                     </li>
                     <li class="columns">
                         <figure>
-                            <img src="images/photo-1423824649838-d8f4efbc0cb3.jpg" alt="img03">
+                            <img src="images/accept_all_you_see-wallpaper-1366x768.jpg" alt="img03">
                             <figcaption>
                                 <h3>Architectural design</h3>
                                 <span>Print Solutions</span>
@@ -99,7 +115,7 @@
                     </li>
                     <li class="columns">
                         <figure>
-                            <img src="images/photo-1416339442236-8ceb164046f8.jpg" alt="img04">
+                            <img src="images/allen_lambert_galleria-wallpaper-1366x768.jpg" alt="img04">
                             <figcaption>
                                 <h3>Architectural design</h3>
                                 <span>Print Solutions</span>
@@ -133,8 +149,7 @@
 
         </section>
     </div>
-
-
+    <script src="start/js/main.js"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
