fixed bug on my text animation

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h1 class="cd-headline letters rotate-3">
 			<span>We are Architectural Design Agency that is:</span>
 			<span class="cd-words-wrapper">
-				<b class="is-visible">Innotive</b>
+				<b class="is-visible">Innovative</b>
 				<b>Dedicated</b>
 				<b>Focused</b>
 			</span>
@@ -149,6 +149,7 @@
 
         </section>
     </div>
+    <script src="start/js/jquery-2.1.1.js"></script>
     <script src="start/js/main.js"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
