adjusted the with

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!--------------------Portfolio Section--------->
         <section id="Portfolio">
             <h2 class="titleP">Portfolio</h2>
-            <div class="row columns">
+            <div class="row large-12 columns">
                 <ul class="grid cs-style-1 rows small-up-1 medium-up-1 large-up-2 imgH">
 
                     <li class="columns ">
@@ -129,22 +129,7 @@
         </section>
         <!--        MEmbers Section-->
         <section id="Members" class="rows columns">
-            <section id="grid" class="grid clearfix">
-                <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
-                    <figure>
-                        <img src="img/1.png" />
-                        <svg viewBox="0 0 180 320" preserveAspectRatio="none">
-                            <path d="M 180,160 0,218 0,0 180,0 z" />
-                        </svg>
-                        <figcaption>
-                            <h2>Crystalline</h2>
-                            <p>Soko radicchio bunya nuts gram dulse.</p>
-                            <button>View</button>
-                        </figcaption>
-                    </figure>
-                </a>
-                <!-- ... -->
-            </section>
+
 
 
         </section>
