--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Print Design sAgency</title>
+    <title>Print Design Agency</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="start/css/reset.css">
+    <!--    <link rel="stylesheet" href="start/css/reset.css">-->
     <!-- CSS reset -->
-    <link rel="stylesheet" href="start/css/style.css">
+    <!--    <link rel="stylesheet" href="start/css/style.css">-->
     <!-- Resource style -->
-
-    <script src="start/js/modernizr.js"></script>
+    <!--    <script src="start/js/modernizr.js"></script>-->
     <!-- Modernizr -->
 </head>
 
@@ -26,116 +25,58 @@
         <!--    Navigation section-->
         <section class="home">
             <div class="row columns text-center">
-                <div class="Aname">PRINT DESIGN AGENCY</div>
+                <div class="Aname">
+                    <h2>PRINT DESIGN AGENCY</h2></div>
             </div>
+
+            <!-----------------------------Navigation bar----------------------->
             <div class="row small-12 columns text-center">
-                <!---------------------------Navigation bar----------------------->
-                <nav class="menu menu--prospero">
-                    <ul class="menu__list">
-                        <li class="menu__item menu__item--current">
-                            <a class="menu__link">Home</a></li>
-                        <li class="menu__item">
-                            <a class="menu__link">About us</a></li>
-                        <li class="menu__item"><a class="menu__link" href=" #Portfolio">Porfolio</a></li>
-                        <li class="menu__item"><a class="menu__link">Blog</a></li>
-                        <li class="menu__item"><a class="menu__link">Members</a></li>
-                        <li class="menu__item"><a class="menu__link">Contact us</a></li>s
-                    </ul>
-                </nav>
-            </div>
+                <section class="intro">
+                    <nav class="menu menu--prospero">
 
-            <!--            Animated text-->
-            <div class="row empty">
-                <div class="small-6 large-centered columns">&nbsp;</div>
-            </div>
+                        <ul class="menu__list">
+                            <li class="menu__item menu__item--current">
+                                <a class="menu__link">Home</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link">About Us</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link">Portfolio</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link">Members</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link">Blog</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link">Contact us</a>
+                            </li>
+                        </ul>
 
-            <div class="row colunms ">
-                <!--
-                <section class="cd-intro">
-                    <h1 class="cd-headline letters type">
-			<span>We are an Architectural Design Agency that is:</span>
-			<span class="cd-words-wrapper waiting">
-				<b class="is-visible">Innovative</b>
-				<b>Dedicated</b>
-				<b>Focused</b>
-			</span>
-		</h1>
-                </section>
--->
-                <section class="cd-intro">
-                    <h1 class="cd-headline letters rotate-3">
-			<span>We are Architectural Design Agency that is:</span>
-			<span class="cd-words-wrapper">
-				<b class="is-visible">Innovative</b>
-				<b>Dedicated</b>
-				<b>Focused</b>
-			</span>
-		</h1>
+                    </nav>
+
                 </section>
 
-
             </div>
+
+            <!------------------------- Animated text-------------------------->
         </section>
         <hr>
-        <!--------------------Portfolio Section--------->
-        <section id="Portfolio">
-            <h2 class="titleP">Portfolio</h2>
-            <div class="row large-12 columns">
-                <ul class="grid cs-style-1 rows small-up-1 medium-up-1 large-up-2 imgH">
+        <!----------------------------Portfolio Section---------------------->
 
-                    <li class="columns ">
-                        <figure>
-                            <img src="images/baroque_architecture-wallpaper-1366x768.jpg" alt="img01">
-                            <figcaption>
-                                <h3>Architectural design</h3>
-                                <span>Print Solutions</span>
-                                <a href="https://www.architecture.com/Explore/Stories/Howtotellifabuildingiswell-designed.aspx">Take a look</a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li class="columns">
-                        <figure>
-                            <img src="images/across_the_floors_of_union_station-wallpaper-1366x768%20(1).jpg" alt="img02">
-                            <figcaption>
-                                <h3>Architectural design</h3>
-                                <span>Print Solutions</span>
-                                <a href="https://www.architecture.com/Explore/Stories/Howtotellifabuildingiswell-designed.aspx">Take a look</a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li class="columns">
-                        <figure>
-                            <img src="images/accept_all_you_see-wallpaper-1366x768.jpg" alt="img03">
-                            <figcaption>
-                                <h3>Architectural design</h3>
-                                <span>Print Solutions</span>
-                                <a href="https://www.architecture.com/Explore/Stories/Howtotellifabuildingiswell-designed.aspx">Take a look</a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li class="columns">
-                        <figure>
-                            <img src="images/allen_lambert_galleria-wallpaper-1366x768.jpg" alt="img04">
-                            <figcaption>
-                                <h3>Architectural design</h3>
-                                <span>Print Solutions</span>
-                                <a href="https://www.architecture.com/Explore/Stories/Howtotellifabuildingiswell-designed.aspx">Take a look</a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                </ul>
-
-            </div>
-        </section>
-        <!--        MEmbers Section-->
+        <!---------------------------Members Section------------------------->
         <section id="Members" class="rows columns">
 
 
 
         </section>
     </div>
+    <!--
     <script src="start/js/jquery-2.1.1.js"></script>
     <script src="start/js/main.js"></script>
+-->
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
