added intro text

--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@
             </div>
 
             <!------------------------- Animated text-------------------------->
+            <div class="rows">
+                <div class="large-3 columns">&nbsp;</div>
+                <div class="large-6 columns">
+                    <section class="cd-intro">
+                        <h1 class="cd-headline slide">
+			<span>My favourite food is</span>
+			<span class="cd-words-wrapper">
+				<b class="is-visible">pizza</b>
+				<b>sushi</b>
+				<b>steak</b>
+			</span>
+		</h1>
+                    </section>
+                </div>
+                <div class="large-3 columns">&nbsp;</div>
+
+            </div>
+            <!-- cd-intro -->
         </section>
         <hr>
         <!----------------------------Portfolio Section---------------------->
