--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 
-    <!--    <link rel="stylesheet" href="start/css/reset.css">-->
+    <link rel="stylesheet" href="start/css/reset.css">-->
     <!-- CSS reset -->
-    <!--    <link rel="stylesheet" href="start/css/style.css">-->
+    <link rel="stylesheet" href="start/css/style.css">-->
     <!-- Resource style -->
-    <!--    <script src="start/js/modernizr.js"></script>-->
+    <script src="start/js/modernizr.js"></script>-->
     <!-- Modernizr -->
 </head>
 
@@ -67,11 +67,11 @@
                 <div class="large-6 columns">
                     <section class="cd-intro">
                         <h1 class="cd-headline slide">
-			<span>My favourite food is</span>
+			<span>We are an architectural company that is</span>
 			<span class="cd-words-wrapper">
-				<b class="is-visible">pizza</b>
-				<b>sushi</b>
-				<b>steak</b>
+				<b class="is-visible">Dedicated</b>
+				<b>Innovative</b>
+				<b>and Efficient</b>
 			</span>
 		</h1>
                     </section>
@@ -91,10 +91,9 @@
 
         </section>
     </div>
-    <!--
+
     <script src="start/js/jquery-2.1.1.js"></script>
     <script src="start/js/main.js"></script>
--->
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
