changed max width

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="start/css/reset.css">-->
+    <link rel="stylesheet" href="start/css/reset.css">
     <!-- CSS reset -->
-    <link rel="stylesheet" href="start/css/style.css">-->
+    <link rel="stylesheet" href="start/css/style.css">
     <!-- Resource style -->
-    <script src="start/js/modernizr.js"></script>-->
+    <script src="start/js/modernizr.js"></script>
     <!-- Modernizr -->
 </head>
 
@@ -62,21 +62,21 @@
             </div>
 
             <!------------------------- Animated text-------------------------->
-            <div class="rows">
-                <div class="large-3 columns">&nbsp;</div>
-                <div class="large-6 columns">
+            <div class="rows introtext">
+                <!--                <div class="large-3 columns">&nbsp;</div>-->
+                <div class="large-12 columns">
                     <section class="cd-intro">
-                        <h1 class="cd-headline slide">
-			<span>We are an architectural company that is</span>
+                        <h5 class="cd-headline slide">
+			<span>We are an Architectural Designing Company that is</span>
 			<span class="cd-words-wrapper">
 				<b class="is-visible">Dedicated</b>
 				<b>Innovative</b>
-				<b>and Efficient</b>
+				<b>and Efficient in providing sound solution to architectural designing</b>
 			</span>
-		</h1>
+            </h5>
                     </section>
                 </div>
-                <div class="large-3 columns">&nbsp;</div>
+                <!--                <div class="large-3 columns">&nbsp;</div>-->
 
             </div>
             <!-- cd-intro -->
