--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 
             <!------------------------- Animated text-------------------------->
             <div class="rows introtext">
-                <!--                <div class="large-3 columns">&nbsp;</div>-->
                 <div class="large-12 columns">
                     <section class="cd-intro">
                         <h5 class="cd-headline slide">
@@ -78,8 +77,30 @@
                 </div>
             </div>
         </section>
-        <hr>
         <!----------------------------Portfolio Section---------------------->
+        <section class="portfolio" id="Portfolio">
+            <div class="rows large-12 columns">
+                <ul class="grid cs-style-1">
+                    <li>
+                        <figure>
+                            <img src="images/accept_all_you_see-wallpaper-1366x768.jpg" alt="img01">
+                            <figcaption>
+                                <h3>Camera</h3>
+                                <span>Jacob Cummings</span>
+                                <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <!-- ... -->
+                        </figure>
+                    </li>
+                    <!-- ... -->
+                </ul>
+
+            </div>
+        </section>
 
         <!---------------------------Members Section------------------------->
         <section id="Members" class="rows columns">
