--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
                             </figcaption>
                         </figure>
                     </li>
+                    <li>
+                        <figure>
+                            <img src="images/accept_all_you_see-wallpaper-1366x768.jpg" alt="img01">
+                            <figcaption>
+                                <h3>Camera</h3>
+                                <span>Print Design Agency</span>
+                                <a href="http://dribbble.com/shots/1115632-Camera">Take a look</a>
+                            </figcaption>
+                        </figure>
+                    </li>
                     <!-- ... -->
                 </ul>
 
