added a modernizer script and a touch effecs script

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Resource style -->
     <script src="start/js/modernizr.js"></script>
     <!-- Modernizr -->
+    <script src="js/modernizr.custom.js"></script>
 </head>
 
 <body>
@@ -63,14 +64,14 @@
 
             <!------------------------- Animated text-------------------------->
             <div class="rows introtext">
-                <div class="large-12 columns">
+                <div class="small-12 large-12 columns">
                     <section class="cd-intro">
                         <h5 class="cd-headline slide">
 			<span>We are an Architectural Designing Company that is</span>
 			<span class="cd-words-wrapper">
 				<b class="is-visible">Dedicated</b>
 				<b>Innovative</b>
-				<b>and Efficient in providing sound solution to architectural designing</b>
+				<b>and Efficient </b>
 			</span>
             </h5>
                     </section>
@@ -134,7 +135,7 @@
 
         </section>
     </div>
-
+    <script src="js/toucheffects.js"></script>
     <script src="start/js/jquery-2.1.1.js"></script>
     <script src="start/js/main.js"></script>
     <script src="js/vendor/jquery.js"></script>
