--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+    <link href="css/component.css" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" href="start/css/reset.css">
     <!-- CSS reset -->
