added  chages to menbers section with css and js files

--- a/index.html
+++ b/index.html
@@ -130,7 +130,27 @@
         </section>
 
         <!---------------------------Members Section------------------------->
-        <section id="Members" class="rows columns">
+        <section id="Members" class="members">
+            <div class="rows columns">
+                <section id="grid" class="grid clearfix">
+                    <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
+                        <figure>
+                            <img src="images/allen_lambert_galleria-wallpaper-1366x768.jpg" />
+                            <svg viewBox="0 0 180 320" preserveAspectRatio="none">
+                                <path d="M 180,160 0,218 0,0 180,0 z" />
+                            </svg>
+                            <figcaption>
+                                <h2>Andrew Anampiu</h2>
+                                <p>Architecture</p>
+                                <button>View</button>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <!-- ... -->
+                </section>
+
+
+            </div>
 
 
 
