added changes to css member section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <path d="M 180,160 0,218 0,0 180,0 z" />
                             </svg>
                             <figcaption>
-                                <h2>Andrew Anampiu</h2>
+                                <h2>Andrew</h2>
                                 <p>Architecture</p>
                                 <button>View</button>
                             </figcaption>
