added snap.svg js script

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="start/js/modernizr.js"></script>
     <!-- Modernizr -->
     <script src="js/modernizr.custom.js"></script>
+    <sript src="js/snap.svg-min.js"></sript>
 </head>
 
 <body>
