changed image on members

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <section id="grid" class="grid clearfix">
                     <a href="#" data-path-hover="m 180,34.57627 -180,0 L 0,0 180,0 z">
                         <figure>
-                            <img src="images/allen_lambert_galleria-wallpaper-1366x768.jpg" />
+                            <img src="../print-design-agency/images/valencia_city_of_artscience-wallpaper-800x600.jpg" />
                             <svg viewBox="0 0 180 320" preserveAspectRatio="none">
                                 <path d="M 180,160 0,218 0,0 180,0 z" />
                             </svg>
