changed images on portfolio

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </li>
                     <li>
                         <figure>
-                            <img src="images/accept_all_you_see-wallpaper-1366x768.jpg" alt="img01">
+                            <img src="images/baroque_architecture-wallpaper-1366x768.jpg" alt="img01">
                             <figcaption>
                                 <h3>Camera</h3>
                                 <span>Print Design Agency</span>
@@ -107,7 +107,7 @@
                     </li>
                     <li>
                         <figure>
-                            <img src="images/accept_all_you_see-wallpaper-1366x768.jpg" alt="img01">
+                            <img src="images/allen_lambert_galleria-wallpaper-1366x768.jpg" alt="img01">
                             <figcaption>
                                 <h3>Camera</h3>
                                 <span>Print Design Agency</span>
@@ -117,7 +117,7 @@
                     </li>
                     <li>
                         <figure>
-                            <img src="images/accept_all_you_see-wallpaper-1366x768.jpg" alt="img01">
+                            <img src="images/across_the_floors_of_union_station-wallpaper-1366x768%20(1).jpg" alt="img01">
                             <figcaption>
                                 <h3>Camera</h3>
                                 <span>Print Design Agency</span>
