--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
                     <nav class="menu menu--prospero">
 
                         <ul class="menu__list">
-                            <li class="menu__item menu__item--current">
+                            <li class="small-2 columns menu__item menu__item--current">
                                 <a class="menu__link">Home</a>
                             </li>
-                            <li class="menu__item">
+                            <li class=" small-2 columns menu__item">
                                 <a class="menu__link">About Us</a>
                             </li>
-                            <li class="menu__item">
+                            <li class="menu__item small-2 columns">
                                 <a class="menu__link">Portfolio</a>
                             </li>
-                            <li class="menu__item">
+                            <li class="menu__item small-2 columns">
                                 <a class="menu__link">Members</a>
                             </li>
-                            <li class="menu__item">
+                            <li class="menu__item small-2 columns">
                                 <a class="menu__link">Blog</a>
                             </li>
-                            <li class="menu__item">
+                            <li class="menu__item small-2 columns">
                                 <a class="menu__link">Contact us</a>
                             </li>
                         </ul>
