--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <body>
     <div class="container">
         <!--    Navigation section-->
+        <section class = "overlay">
         <section class="home">
             <div class="row columns text-center">
                 <div class="Aname">
@@ -80,6 +81,7 @@
                     </section>
                 </div>
             </div>
+        </section>
         </section>
         <!----------------------------Portfolio Section---------------------->
         <section class="portfolio" id="Portfolio">
