--- a/index.html
+++ b/index.html
@@ -27,50 +27,50 @@
 <body>
     <div class="container">
         <!--    Navigation section-->
-        <section class = "overlay">
-        <section class="home">
-            <div class="row columns text-center">
-                <div class="Aname">
-                    <h2>PRINT DESIGN AGENCY</h2></div>
-            </div>
+        <section class="overlay">
+            <section class="home">
+                <div class="row columns text-center">
+                    <div class="Aname">
+                        <h2>PRINT DESIGN AGENCY</h2></div>
+                </div>
 
-            <!-----------------------------Navigation bar----------------------->
-            <div class="row small-12 columns text-center">
-                <section class="intro">
-                    <nav class="menu menu--prospero">
+                <!-----------------------------Navigation bar----------------------->
+                <div class="row small-12 columns text-center">
+                    <section class="intro">
+                        <nav class="menu menu--prospero">
 
-                        <ul class="menu__list">
-                            <li class="small-2 columns menu__item menu__item--current">
-                                <a class="menu__link">Home</a>
-                            </li>
-                            <li class=" small-2 columns menu__item">
-                                <a class="menu__link">About Us</a>
-                            </li>
-                            <li class="menu__item small-2 columns">
-                                <a class="menu__link">Portfolio</a>
-                            </li>
-                            <li class="menu__item small-2 columns">
-                                <a class="menu__link">Members</a>
-                            </li>
-                            <li class="menu__item small-2 columns">
-                                <a class="menu__link">Blog</a>
-                            </li>
-                            <li class="menu__item small-2 columns">
-                                <a class="menu__link">Contact us</a>
-                            </li>
-                        </ul>
+                            <ul class="menu__list">
+                                <li class="small-2 columns menu__item menu__item--current">
+                                    <a class="menu__link">Home</a>
+                                </li>
+                                <li class=" small-2 columns menu__item">
+                                    <a class="menu__link">About Us</a>
+                                </li>
+                                <li class="menu__item small-2 columns">
+                                    <a class="menu__link">Portfolio</a>
+                                </li>
+                                <li class="menu__item small-2 columns">
+                                    <a class="menu__link">Members</a>
+                                </li>
+                                <li class="menu__item small-2 columns">
+                                    <a class="menu__link">Blog</a>
+                                </li>
+                                <li class="menu__item small-2 columns">
+                                    <a class="menu__link">Contact us</a>
+                                </li>
+                            </ul>
 
-                    </nav>
+                        </nav>
 
-                </section>
+                    </section>
 
-            </div>
+                </div>
 
-            <!------------------------- Animated text-------------------------->
-            <div class="rows introtext">
-                <div class="small-12 large-12 columns">
-                    <section class="cd-intro">
-                        <h5 class="cd-headline slide">
+                <!------------------------- Animated text-------------------------->
+                <div class="rows introtext">
+                    <div class="small-12 large-12 columns">
+                        <section class="cd-intro">
+                            <h5 class="cd-headline slide">
 			<span>We are an Architectural Designing Company that is</span>
 			<span class="cd-words-wrapper">
 				<b class="is-visible">Dedicated</b>
@@ -78,15 +78,16 @@
 				<b>and Efficient </b>
 			</span>
             </h5>
-                    </section>
+                        </section>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
         </section>
         <!----------------------------Portfolio Section---------------------->
         <section class="portfolio" id="Portfolio">
             <div class="rows large-12 columns">
                 <ul class="grid cs-style-1">
+                    <h1>Portfolio</h1>
                     <li>
                         <figure>
                             <img src="images/accept_all_you_see-wallpaper-1366x768.jpg" alt="img01">
