added columns to my nav bar

--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
             </div>
 
             <!-----------------------------Navigation bar----------------------->
-            <div class="row small-12 columns text-center">
+            <div class="row text-center">
                 <section class="intro">
-                    <nav class="menu menu--prospero">
+                    <nav class="small-12 large-12 columns menu menu--prospero">
 
                         <ul class="menu__list">
-                            <li class="small-2 columns menu__item menu__item--current">
+                            <li class="small-12 large-2 columns menu__item menu__item--current">
                                 <a class="menu__link">Home</a>
                             </li>
-                            <li class=" small-2 columns menu__item">
+                            <li class=" small-12 large-2 columns menu__item">
                                 <a class="menu__link">About Us</a>
                             </li>
-                            <li class="menu__item small-2 columns">
+                            <li class="small-12 large-2 columns menu__item ">
                                 <a class="menu__link">Portfolio</a>
                             </li>
-                            <li class="menu__item small-2 columns">
+                            <li class="small-12 large-2 columns menu__item ">
                                 <a class="menu__link">Members</a>
                             </li>
-                            <li class="menu__item small-2 columns">
+                            <li class="small-12 large-2 columns menu__item">
                                 <a class="menu__link">Blog</a>
                             </li>
-                            <li class="menu__item small-2 columns">
+                            <li class="small-12 large-2 columns menu__item ">
                                 <a class="menu__link">Contact us</a>
                             </li>
                         </ul>
