added changes made

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
 
             <!------------------------- Animated text-------------------------->
-            <div class="rows introtext overlay">
+            <div class="row introtext">
                 <div class="small-12 large-12 columns">
                     <section class="cd-intro">
                         <h5 class="cd-headline slide">
@@ -85,7 +85,7 @@
         <section class="portfolio" id="Portfolio">
             <div class="rows large-12 columns">
                 <ul class="grid cs-style-1">
-                    <h2>PORTFOLIO</h2>
+                    <h2 class="title">PORTFOLIO</h2>
                     <li>
                         <figure>
                             <img src="images/accept_all_you_see-wallpaper-1366x768.jpg" alt="img01">
