--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 
     <body>
+        <div class="container">
+            <div class="overlay">
+                <section class=" row home">
 
+                </section>
+            </div>
+            <section class="row about">
 
+            </section>
+            <section class=" row blog">
+            </section>
+            <section class=" row portfolio">
+            </section>
+            <section class="row  members">
+            </section>
+            <section class="row contact">
+            </section>
+        </div>
 
 
 
