--- a/index.html
+++ b/index.html
@@ -11,11 +11,26 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+    <!--    nav css and scripts-->
 
     <body>
         <div class="container">
             <div class="overlay">
                 <section class=" row home">
+                    <!--                    navigation bar-->
+                    <section class="section section--menu" id="Viola">
+                        <h2 class="section__title">Viola</h2>
+                        <span class="link-copy"></span>
+                        <nav class="menu menu--viola">
+                            <ul class="menu__list">
+                                <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Articles</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Reviews</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </section>
 
                 </section>
             </div>
