--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
     <!--    nav css and scripts-->
+    <link href="css/nav/demo.css" type="text/css" rel="stylesheet">
+    <link href="css/nav/normalize.css" type="text/css" rel="stylesheet">
 
     <body>
         <div class="container">
