--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!--    nav css and scripts-->
     <link href="css/nav/demo.css" type="text/css" rel="stylesheet">
     <link href="css/nav/normalize.css" type="text/css" rel="stylesheet">
+    <script src="js/nav/modernizr.custom.js"></script>
 
     <body>
         <div class="container">
@@ -49,12 +50,45 @@
             </section>
         </div>
 
-
-
-        <script src="js/toucheffects.js"></script>
-        <script src="start/js/jquery-2.1.1.js"></script>
-        <script src="start/js/main.js"></script>
+        <!--nav scrips-->
+        <script src="js/nav/clipboard.min.js"></script>
         <script src="js/vendor/jquery.js"></script>
+        <script>
+            (function () {
+			[].slice.call(document.querySelectorAll('.menu')).forEach(function (menu) {
+                    var menuItems = menu.querySelectorAll('.menu__link'),
+                        setCurrent = function (ev) {
+                            ev.preventDefault();
+
+                            var item = ev.target.parentNode; // li
+
+                            // return if already current
+                            if (classie.has(item, 'menu__item--current')) {
+                                return false;
+                            }
+                            // remove current
+                            classie.remove(menu.querySelector('.menu__item--current'), 'menu__item--current');
+                            // set current
+                            classie.add(item, 'menu__item--current');
+                        };
+
+				[].slice.call(menuItems).forEach(function (el) {
+                        el.addEventListener('click', setCurrent);
+                    });
+                });
+
+			[].slice.call(document.querySelectorAll('.link-copy')).forEach(function (link) {
+                    link.setAttribute('data-clipboard-text', location.protocol + '//' + location.host + location.pathname + '#' + link.parentNode.id);
+                    new Clipboard(link);
+                    link.addEventListener('click', function () {
+                        classie.add(link, 'link-copy--animate');
+                        setTimeout(function () {
+                            classie.remove(link, 'link-copy--animate');
+                        }, 300);
+                    });
+                });
+            })(window);
+        </script>
         <script src="js/vendor/what-input.js"></script>
         <script src="js/vendor/foundation.js"></script>
         <script src="js/app.js"></script>
