--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!--    nav css and scripts-->
     <link href="css/nav/demo.css" type="text/css" rel="stylesheet">
     <link href="css/nav/normalize.css" type="text/css" rel="stylesheet">
+    <link href="css/nav/component.css" type="text/css" rel="stylesheet">
     <script src="js/nav/modernizr.custom.js"></script>
 
     <body>
