modified position of nav bar

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="overlay">
                 <section class=" row home">
                     <!--                    navigation bar-->
-                    <section class="section section--menu" id="Viola">
-                        <h2 class="section__title">Viola</h2>
+                    <section class="section section--menu row" id="Viola">
+                        <!--                       <h2 class="section__title">Viola</h2>-->
                         <span class="link-copy"></span>
                         <nav class="menu menu--viola">
                             <ul class="menu__list">
