mofied tex size and content

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                         <nav class="menu menu--viola">
                             <ul class="menu__list">
                                 <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Articles</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Reviews</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Shop</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Contact</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Abou Us</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Portfolio</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Members</a></li>
+                                <li class="menu__item"><a href="#" class="menu__link">Contact Us</a></li>
                             </ul>
                         </nav>
                     </section>
