--- a/index.html
+++ b/index.html
@@ -22,19 +22,18 @@
             <div class="overlay">
                 <section class=" row home">
                     <!--                    navigation bar-->
-                    <section class="section section--menu row" id="Viola">
-                        <!--                       <h2 class="section__title">Viola</h2>-->
-                        <span class="link-copy"></span>
+                    <div class="row">
                         <nav class="menu menu--viola">
                             <ul class="menu__list">
-                                <li class="menu__item menu__item--current"><a href="#" class="menu__link">Home</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Abou Us</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Portfolio</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Members</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Contact Us</a></li>
+                                <li class="menu__item menu__item--current small-6 large-2 columns"><a href="#" class="menu__link">Home</a></li>
+                                <li class="menu__item small-6 large-2 columns"><a href="#" class="menu__link">About Us</a></li>
+                                <!--                                <li class="menu__item small-6 large-2 columns"><a href="#" class="menu__link">Blog</a></li>-->
+                                <li class="menu__item small-6 large-2 columns"><a href="#" class="menu__link">Portfolio</a></li>
+                                <li class="menu__item small-6 large-2 columns"><a href="#" class="menu__link">Members</a></li>
+                                <li class="menu__item small-6 large-2 columns"><a href="#" class="menu__link">Contact Us</a></li>
                             </ul>
                         </nav>
-                    </section>
+                    </div>
 
                 </section>
             </div>
