added about us section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,20 @@
                 </section>
             </div>
             <section class="row about">
-
+                <div class="row columns empty">&nbsp;</div>
+                <div class="row">
+                    <div class="large-3 columns">
+                        <img src="images/the_abbey-wallpaper-800x600.jpg">
+                    </div>
+                    <div class="large-6 columns">
+                        <p>
+                            I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I’m a great place for you to tell a story and let your users know a little more about you.
+                        </p>
+                    </div>
+                    <div class="large-3 columns">
+                        <img src="images/the_abbey-wallpaper-800x600.jpg">
+                    </div>
+                </div>
             </section>
             <section class=" row blog">
             </section>
