modified portfolio description

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <img src="img/accept_all_you_see-wallpaper-1366x768.jpg" width="80%" height="40px" class="img">
                                 <figcaption>
                                     <h3>Originality</h3>
-                                    <span>print design agency</span>
+                                    <span>print design</span>
                                     <a href="">view</a>
                                 </figcaption>
                             </figure>
@@ -120,7 +120,7 @@
                                 <img src="img/across_the_floors_of_union_station-wallpaper-1366x768%20(1).jpg" width="80%" height="40px" class="img">
                                 <figcaption>
                                     <h3>EPICNESS</h3>
-                                    <span>print design agencies</span>
+                                    <span>print design</span>
                                     <a href="">view</a>
                                 </figcaption>
                             </figure>
@@ -131,7 +131,7 @@
                                 <img src="img/baroque_architecture-wallpaper-1366x768.jpg" width="80%" height="5px" class="img">
                                 <figcaption>
                                     <h3>Settings</h3>
-                                    <span>print design agencies</span>
+                                    <span>print design</span>
                                     <a href="http://dribbble.com/shots/1116685-Settings">view</a>
                                 </figcaption>
                             </figure>
@@ -142,7 +142,7 @@
                                 <img src="img/allen_lambert_galleria-wallpaper-1366x768.jpg" width="80%" height="40px" class="img">
                                 <figcaption>
                                     <h3>Mordernized</h3>
-                                    <span>print design agencies</span>
+                                    <span>print design</span>
                                     <a href="http://dribbble.com/shots/1116775-Safari">view</a>
                                 </figcaption>
                             </figure>
