changed title color,bg-color and brand promise of site

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                             <h1 class="cd-headline rotate-1">
                          <div class="large-12 columns hi"></div> <div class="large-12 columns hi"></div>
 
-    <span>Our vision is to design and build</span>
+    <span>Our vision is to construct</span>
     <span class="cd-words-wrapper">
       <b class="is-visible">Stylish</b>
       <b>Mordern</b>
-      <b>& Innovating buildings</b>
+      <b>and Innovating buildings</b>
     </span><br>
             <h2>Building Architecture<br>Worthy of being called ART</h2>
   </h1>
